Department criado e anotações

--- a/SalesWebMvc/Views/Home/Privacy.cshtml
+++ b/SalesWebMvc/Views/Home/Privacy.cshtml
@@ -1,7 +1,6 @@
-﻿@{//@ é código c# normal, é só chamar a tag @... ou colocar entre @{...}
+﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1><!--Essa tag["Title"] está pegando o "Privacy Policy" que foi declarada acima-->
+<h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
-<p>@ViewData["TESTE"]</p><!--Esse ViewData["TESTE"] está no HomeController, seu conteúdo na página é ViewData do HomeController-->
