--- a/SalesWebMvc/Views/Shared/_Layout.cshtml
+++ b/SalesWebMvc/Views/Shared/_Layout.cshtml
@@ -22,6 +22,13 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Departments" asp-action="Index">Departments</a>
+                        </li>
+                        <!--asp-controller é o que está na pasta Controllers, asp-action é o que está na pasta View/Sellers/Index-->
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Sellers" asp-action="Index">Sellers</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
