--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -6,6 +6,10 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<p>
+    <a asp-action="Create" type="button" class="btn btn-success">Create New</a>
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="">
