--- a/SalesWebMvc/Views/Sellers/Create.cshtml
+++ b/SalesWebMvc/Views/Sellers/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿<!--Essa View vai ter a disposição dela o objeto Seller, por esse motivo o atributo "Name" e outros campos foi reconhecido-->
-@model SalesWebMvc.Models.Seller
+@model SalesWebMvc.Models.ViewModels.SellerFormViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,20 +13,24 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div class="form-group">
-                <label asp-for="Name" class="col-form-label mt-1"></label>
-                <input asp-for="Name" class="form-control" placeholder="Name" />
+                <label asp-for="Seller.Name" class="col-form-label mt-1"></label>
+                <input asp-for="Seller.Name" class="form-control" placeholder="Name" />
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="col-form-label mt-1"></label>
-                <input asp-for="Email" class="form-control" placeholder="E-mail" />
+                <label asp-for="Seller.Email" class="col-form-label mt-1"></label>
+                <input asp-for="Seller.Email" class="form-control" placeholder="E-mail" />
             </div>
             <div class="form-group">
-                <label asp-for="BirthDate" class="col-form-label mt-1"></label>
-                <input asp-for="BirthDate" class="form-control" />
+                <label asp-for="Seller.BirthDate" class="col-form-label mt-1"></label>
+                <input asp-for="Seller.BirthDate" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="BaseSalary" class="col-form-label mt-1"></label>
-                <input asp-for="BaseSalary" class="form-control" placeholder="Base Salary" />
+                <label asp-for="Seller.BaseSalary" class="col-form-label mt-1"></label>
+                <input asp-for="Seller.BaseSalary" class="form-control" placeholder="Base Salary" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Seller.DepartmentId" class="col-form-label mt-1"></label>
+                <select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments,"Id","Name"))" class="form-select "></select>
             </div>
             <hr />
             <div class="form-group">
