--- a/SalesWebMvc/Views/Sellers/Edit.cshtml
+++ b/SalesWebMvc/Views/Sellers/Edit.cshtml
@@ -15,18 +15,22 @@
             <div class="form-group">
                 <label asp-for="Seller.Name" class="col-form-label mt-1"></label>
                 <input asp-for="Seller.Name" class="form-control" placeholder="Name" />
+                <span asp-validation-for="Seller.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.Email" class="col-form-label mt-1"></label>
                 <input asp-for="Seller.Email" class="form-control" placeholder="E-mail" />
+                <span asp-validation-for="Seller.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BirthDate" class="col-form-label mt-1"></label>
                 <input asp-for="Seller.BirthDate" class="form-control" />
+                <span asp-validation-for="Seller.BirthDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BaseSalary" class="col-form-label mt-1"></label>
                 <input asp-for="Seller.BaseSalary" class="form-control" placeholder="Base Salary" />
+                <span asp-validation-for="Seller.BaseSalary" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.DepartmentId" class="col-form-label mt-1"></label>
@@ -35,8 +39,13 @@
             <hr />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-success">
+                <a class="btn btn-secondary" asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
 </div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
 
